--- a/src/components/CardCheckOut/CardCheckOut.css
+++ b/src/components/CardCheckOut/CardCheckOut.css
@@ -18,7 +18,7 @@ form {
 }
 
 /* Buttons and links */
-button {
+.card-button {
   background: #5469d4;
   font-family: Arial, sans-serif;
   color: #ffffff;
@@ -31,14 +31,13 @@ button {
   display: block;
   transition: all 0.2s ease;
   box-shadow: 0px 4px 5.5px 0px rgba(0, 0, 0, 0.07);
-  width: 100%;
 }
 
-button:hover {
+.card-button:hover {
   filter: contrast(115%);
 }
 
-button:disabled {
+.card-button:disabled {
   opacity: 0.5;
   cursor: default;
 }
